# remote-inference

./: .env.example  .gitignore  README.md  SETUP.md  pyproject.toml  set-api-key.sh
logs/: nvidia-smi
remote_inference/: __init__.py  api.py  auth.py  background_removal.py  cli.py  ml.py
