[project]
name = "remote-inference"
version = "0.1.0"
description = "Remote inference package"
requires-python = ">=3.7"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",  # for file uploads
    "pydantic>=2.0",
    "python-dotenv",
    "requests",
    # Core ML dependencies - Constrain versions more tightly
    "torch", # Keep torch less constrained for now unless issues persist
    "torchvision",
    "numpy<2",
    "transformers<4.41", # Constrain transformers below 4.41 as meta tensor handling evolved
    # Image processing
    "opencv-python",
    "pillow",
    # ML libraries
    "timm",
    "scipy",
    "scikit-image",
    "kornia",
    "einops",
    # ML infrastructure
    "huggingface-hub>0.25",
    "accelerate", # Keep accelerate relatively recent
    # Utils
    "tqdm",
    "prettytable",
    # Existing dependencies - *** Pin open-clip-torch ***
    "open-clip-torch==2.22.0" # Pin to a specific, known stable version
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
remote-inference = "remote_inference.cli:main"