[project]
name = "remote-inference"
version = "0.1.0"
description = "Remote inference package"
requires-python = ">=3.7"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",  # for file uploads
    "pydantic>=2.0",
    "python-dotenv",
    "requests",
    # Core ML dependencies - Pinning to Jan 2025 versions
    "torch", # Keep torch less constrained unless issues persist
    "torchvision",
    "numpy<2",
    "transformers~=4.41.0", # Pin transformers to Jan 2025 release
    # Image processing
    "opencv-python",
    "pillow",
    # ML libraries
    "timm", # timm is used by open-clip
    "scipy",
    "scikit-image",
    "kornia",
    "einops",
    # ML infrastructure
    "huggingface-hub>0.25", # Keep relatively recent
    "accelerate", # Keep relatively recent
    # Utils
    "tqdm",
    "prettytable",
    # Existing dependencies - *** Pin open-clip-torch to Jan 2025 version ***
    "open-clip-torch~=2.28.0" # Pin to Jan 2025 release
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
remote-inference = "remote_inference.cli:main"